                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 08-10-2004 added: <showfreemem> tag to XboxMediaCenter.xml to help track memory issues
                      No need to update XBoxMediaCenter.xml unless you want this feature.
  - 07-10-2004 fixed: Spin controls showed range unnecessarily.
  - 07-10-2004 updated: Hebrew language file by okets
  - 07-10-2004 changed: Reset instead of powercycle on pressing reboot. [ 1041020 ]
  - 06-10-2004 fixed: crash when loading a second movie using TTF fonts for subs
  - 05-10-2004 fixed: scrolling text in fadecontrols ignored the width parameter when TTF fonts are used.
  - 05-10-2004 fixed: Virtual keyboard didn't center properly
  - 05-10-2004 fixed: [ 1040425 ] XBE titles don't show correct
  - 05-10-2004 updated: German language file
  - 05-10-2004 fixed: [ 1039240 ] "Out of Memory Error" switching between pictures/slideshow
  - 05-10-2004 fixed: PAL60 startup for emergency recovery console
  - 04-10-2004 added: Initial Symbols support to the virtual keyboard.
  - 04-10-2004 fixed: List/Thumbs page indicator didn't show total # of pages.
  - 04-10-2004 fixed: XBMC wouldn't run if AVAlaunch or X3 bios etc. set the EEPROM mode to PAL60
                       - XBMC detects this and launchs in NTSC mode, as without full PAL support
                         that's all you get.  Change the eeprom setting back to PAL_I if you want PAL.
  - 04-10-2004 fixed: List control - up/down arrow didn't work as expected.
  - 03-10-2004 fixed: fanspeed was being restored on exit when no fanoptions enabled.
  - 02-10-2004 fixed: FileTimetoSystemTime debug assertion fail